--- a/BlogProject/Views/Blog/Index.cshtml
+++ b/BlogProject/Views/Blog/Index.cshtml
@@ -34,7 +34,7 @@
 									</li>
 									<li>
 										<a href="#">
-											<i class="fas fa-eye"></i> @item.CategoryID
+											<i class="fas fa-hashtag"></i> @item.Category.CategoryName
 										</a>
 									</li>
 
