--- a/BlogProject/Views/Blog/Index.cshtml
+++ b/BlogProject/Views/Blog/Index.cshtml
@@ -40,7 +40,7 @@
 
 								</ul>
 								<h5 class="card-title">
-									<a href="/Blog/BlogDetails/@item.BlogID">@item.BlogTitle.Substring(0,item.BlogTitle.Substring(0,20).LastIndexOf(" "))...</a>
+									<a href="/Blog/BlogDetails/@item.BlogID/">@item.BlogTitle.Substring(0,item.BlogTitle.Substring(0,20).LastIndexOf(" "))...</a>
 								</h5>
 								<p class="card-text mb-3">@item.BlogContent.Substring(0,item.BlogContent.Substring(0,100).LastIndexOf(" "))...</p>
 								<a href="/Blog/BlogDetails/@item.BlogID" class="btn btn-primary read-m">Read More</a>
