Update controller, view and some classes

--- a/BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/BlogProject/Views/Blog/BlogDetails.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model IEnumerable<EntityLayer.Concrete.Blog>
+
+@{
     ViewData["Title"] = "BlogDetails";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
@@ -9,18 +11,20 @@
         <div class="row">
             <!--left-->
             <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
+                @foreach(var item in Model)
+                {
                 <div class="blog-grid-top">
                     <div class="b-grid-top">
                         <div class="blog_info_left_grid">
                             <a href="single.html">
-                                <img src="images/b1.jpg" class="img-fluid" alt="">
+                                <img src="@item.BlogImage" class="img-fluid" alt="">
                             </a>
                         </div>
                         <div class="blog-info-middle">
                             <ul>
                                 <li>
                                     <a href="#">
-                                        <i class="far fa-calendar-alt"></i> FEB 15,2018
+                                            <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogDate).ToString("dd MMM yyyy"))
                                     </a>
                                 </li>
                                 <li class="mx-2">
@@ -39,20 +43,17 @@
                     </div>
 
                     <h3>
-                        <a href="single.html">Amet consectetur adipisicing </a>
+                        <a href="single.html">@item.BlogTitle </a>
                     </h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua uta enim ad minim ven iam quis nostrud exercitation ullamco labor nisi ut aliquip exea commodo consequat duis
-                        aute irudre dolor in elit sed uta labore dolore reprehender
-                    </p>
+                    <p>@item.BlogContent</p>
                     <a href="single.html" class="btn btn-primary read-m">Read More</a>
                 </div>
+                }
 
                 <div class="comment-top">
                     <h4>Comments</h4>
                     <div class="media">
-                        <img src="images/t1.jpg" alt="" class="img-fluid" />
+                        <img src="/BlogTemplate/images/t1.jpg" alt="" class="img-fluid" />
                         <div class="media-body">
                             <h5 class="mt-0">Joseph Goh</h5>
                             <p>
@@ -62,7 +63,7 @@
 
                             <div class="media mt-3">
                                 <a class="d-flex pr-3" href="#">
-                                    <img src="images/t2.jpg" alt="" class="img-fluid" />
+                                    <img src="/BlogTemplate/images/t2.jpg" alt="" class="img-fluid" />
                                 </a>
                                 <div class="media-body">
                                     <h5 class="mt-0">Richard Spark</h5>
@@ -96,7 +97,7 @@
             <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
                 <div class="right-blog-info text-left">
                     <div class="tech-btm">
-                        <img src="images/banner1.jpg" class="img-fluid" alt="">
+                        <img src="/BlogTemplate/images/banner1.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="tech-btm">
                         <h4>Sign up to our newsletter</h4>
@@ -130,7 +131,7 @@
                         <div class="blog-grids row mb-3">
                             <div class="col-md-5 blog-grid-left">
                                 <a href="single.html">
-                                    <img src="images/1.jpg" class="img-fluid" alt="">
+                                    <img src="/BlogTemplate/images/1.jpg" class="img-fluid" alt="">
                                 </a>
                             </div>
                             <div class="col-md-7 blog-grid-right">
@@ -149,7 +150,7 @@
                         <div class="blog-grids row mb-3">
                             <div class="col-md-5 blog-grid-left">
                                 <a href="single.html">
-                                    <img src="images/6.jpg" class="img-fluid" alt="">
+                                    <img src="/BlogTemplate/images/6.jpg" class="img-fluid" alt="">
                                 </a>
                             </div>
                             <div class="col-md-7 blog-grid-right">
@@ -193,7 +194,7 @@
                         <div class="blog-grids">
                             <div class="blog-grid-left">
                                 <a href="single.html">
-                                    <img src="images/b1.jpg" class="img-fluid" alt="">
+                                    <img src="/BlogTemplate/images/b1.jpg" class="img-fluid" alt="">
                                 </a>
                             </div>
                             <div class="blog-grid-right">
