--- a/BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/BlogProject/Views/Blog/BlogDetails.cshtml
@@ -11,49 +11,49 @@
         <div class="row">
             <!--left-->
             <div class="col-lg-8 left-blog-info-w3layouts-agileits text-left">
-                @foreach(var item in Model)
+                @foreach (var item in Model)
                 {
-                <div class="blog-grid-top">
-                    <div class="b-grid-top">
-                        <div class="blog_info_left_grid">
-                            <a href="single.html">
-                                <img src="@item.BlogImage" class="img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="blog-info-middle">
-                            <ul>
-                                <li>
-                                    <a href="#">
+                    <div class="blog-grid-top">
+                        <div class="b-grid-top">
+                            <div class="blog_info_left_grid">
+                                <a href="single.html">
+                                    <img src="@item.BlogImage" class="img-fluid" alt="">
+                                </a>
+                            </div>
+                            <div class="blog-info-middle">
+                                <ul>
+                                    <li>
+                                        <a href="#">
                                             <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogDate).ToString("dd MMM yyyy"))
-                                    </a>
-                                </li>
-                                <li class="mx-2">
-                                    <a href="#">
-                                        <i class="far fa-thumbs-up"></i> 201 Likes
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="far fa-comment"></i> 15 Comments
-                                    </a>
-                                </li>
+                                        </a>
+                                    </li>
+                                    <li class="mx-2">
+                                        <a href="#">
+                                            <i class="far fa-thumbs-up"></i> 201 Likes
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="far fa-comment"></i> 15 Comments
+                                        </a>
+                                    </li>
 
-                            </ul>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
 
-                    <h3>
-                        <a href="single.html">@item.BlogTitle </a>
-                    </h3>
-                    <p>@item.BlogContent</p>
-                    <a href="/Blog/Index/" class="btn btn-primary read-m">Other blogs</a>
-                </div>
+                        <h3>
+                            <a href="single.html">@item.BlogTitle </a>
+                        </h3>
+                        <p>@item.BlogContent</p>
+                        <a href="/Blog/Index/" class="btn btn-primary read-m">Other blogs</a>
+                    </div>
                 }
 
-                @await Html.PartialAsync("~/Views/Comment/CommentsOnTheBlog.cshtml")
+                @await Component.InvokeAsync("GetCommentListById", new {id = ViewBag.blogid})
 
                 @await Html.PartialAsync("~/Views/Comment/AddCommentToBlog.cshtml")
-           
+
             </div>
 
             <!--//left-->
