--- a/BlogProject/Views/Blog/BlogDetails.cshtml
+++ b/BlogProject/Views/Blog/BlogDetails.cshtml
@@ -72,25 +72,11 @@
                         </form>
 
                     </div>
+
+                    @await Component.InvokeAsync("CategoryListInBlogDetails")
+                 
                     <div class="tech-btm">
-                        <h4>Categories</h4>
-                        <ul class="list-group single">
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Cras justo odio
-                                <span class="badge badge-primary badge-pill">14</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Dapibus ac facilisis in
-                                <span class="badge badge-primary badge-pill">2</span>
-                            </li>
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                Morbi leo risus
-                                <span class="badge badge-primary badge-pill">1</span>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="tech-btm">
-                        <h4>Top stories of the week</h4>
+                        <h4>Author's other blogs</h4>
 
                         <div class="blog-grids row mb-3">
                             <div class="col-md-5 blog-grid-left">
