--- a/BlogProject/Views/Shared/Components/GetCommentListById/Default.cshtml
+++ b/BlogProject/Views/Shared/Components/GetCommentListById/Default.cshtml
@@ -4,7 +4,7 @@
 
     @if (Model.Count() > 0)
     {
-        <h4>Comments</h4>
+        <h4>Comments (@ViewBag.commentcount)</h4>
     }
     else
     {
