--- a/BlogProject/Views/Shared/PartialViews/HeaderPartialTop.cshtml
+++ b/BlogProject/Views/Shared/PartialViews/HeaderPartialTop.cshtml
@@ -1,19 +1,19 @@
 ﻿<div class="top-bar_sub_w3layouts container-fluid">
 	<div class="row">
 		<div class="col-md-4 logo text-left">
-			<a class="navbar-brand" href="index.html">
+			<a class="navbar-brand" href="/Blog/Index/">
 				<i class="fab fa-linode"></i> Weblog
 			</a>
 		</div>
 		<div class="col-md-4 top-forms text-center mt-lg-3 mt-md-1 mt-0">
 			<span>Welcome Back!</span>
 			<span class="mx-lg-4 mx-md-2  mx-1">
-				<a href="~/BlogTemplate/login.html">
+				<a href="#">
 					<i class="fas fa-lock"></i> Sign In
 				</a>
 			</span>
 			<span>
-				<a href="~/BlogTemplate/register.html">
+				<a href="/Register/Index/">
 					<i class="far fa-user"></i> Register
 				</a>
 			</span>
