--- a/BlogProject/Views/Register/Index.cshtml
+++ b/BlogProject/Views/Register/Index.cshtml
@@ -1,57 +1,75 @@
-﻿@{
+﻿@model EntityLayer.Concrete.Writer
+
+@{
     ViewData["Title"] = "BlogDetails";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="~/lib/jquery/dist/jquery.js"></script>
 
 <section class="main-content-w3layouts-agileits">
     <div class="container">
         <h3 class="tittle">Writer Register Page</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form method="post">
+                @using (Html.BeginForm("Index","Register", FormMethod.Post))
+                {       
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">First name</label>
 
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="" required="" name="WriterName">
+                            @Html.TextBoxFor(x=>x.WriterName, new { @class="form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterName)
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom02">Last name</label>
-                            <input type="text" class="form-control" id="validationDefault02" placeholder="" required="" name="WriterLastname">
+                            @Html.TextBoxFor(x=>x.WriterLastname, new { @class="form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterLastname)                          
                         </div>
 
                     </div>
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Mail adress</label>
-
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="" required="" name="WriterMail">
+                            @Html.TextBoxFor(x=>x.WriterMail, new { @class="form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterMail)                        
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Writer Image</label>
-
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="Only image link" required="" name="WriterImage">
+                            @Html.TextBoxFor(x=>x.WriterImage, new { @class="form-control" })
                         </div>
 
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword1 mb-2">Password</label>
-                            <input type="password" class="form-control" id="password1" placeholder="" required="" name="WriterPassword">
+                            @Html.TextBoxFor(x=>x.WriterPassword, new { @class="form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterPassword)
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Confirm Password</label>
-                            <input type="password" class="form-control" id="password2" placeholder="" required="" name="WriterPassword">
+                            @Html.TextBoxFor(x=>x.WriterPassword, new { @class="form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterPassword)                 
                         </div>
 
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Register</button>
                     <p>
-                        <a href="#">By clicking Signup, I agree to your terms</a>
-                    </p>
-                </form>
+                        <a href="#" id="confirm">By clicking Signup, I agree to your terms</a>
+                    </p>         
+                }
 
             </div>
         </div>
     </div>
 </section>
+<script>
+    $("#confirm").click(function(){
+        Swal.fire({
+            confirmButtonText:
+                '<i class="fa fa-thumbs-up"></i> Confirm!',
+            title: 'Information text',
+            text: 'Information and news e-mails will continue to be sent via the e-mail address you have provided to our site. If you want to unsubscribe from the e-mail newsletter, you can stop at the e-mail thread. Your passwords and e-mail addresses are protected in an encrypted format in our reliable databases so that no user can access them.'
+        })
+    }); 
+</script>
